Correctly display "unlimited" local storage limit in settings

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -938,7 +938,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Local storage limit</string>
-    <string name="storage_value">%1$d MB (využíváte %2$.2f MB)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (využíváte %2$.2f MB)</string>
     <!-- endregion -->
     <string name="app_settings">Nastavení aplikace</string>
     <!-- region App Settings -->
