--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -904,7 +904,7 @@ compre más
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Límite de almacenamiento local</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB usado)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB usado)</string>
     <!-- endregion -->
     <string name="app_settings">Configuración de la aplicación</string>
     <!-- region App Settings -->
