--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -877,7 +877,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">本机存储限制</string>
-    <string name="storage_value">%1$d MB（已使用 %2$.2f MB）</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB（已使用 %2$.2f MB）</string>
     <!-- endregion -->
     <string name="app_settings">程序设置</string>
     <!-- region App Settings -->
