--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -904,7 +904,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Límit d\'emmagatzematge local</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB usat)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB usat)</string>
     <!-- endregion -->
     <string name="app_settings">Configuració de l\'aplicació</string>
     <!-- region App Settings -->
