--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -904,7 +904,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Lokal lagerpladsgrænse</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB forbrugt)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB forbrugt)</string>
     <!-- endregion -->
     <string name="app_settings">App-indstillinger</string>
     <!-- region App Settings -->
