--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -903,7 +903,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Όριο τοπικής αποθήκευσης</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB χρησιμοποιούνται)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB χρησιμοποιούνται)</string>
     <!-- endregion -->
     <string name="app_settings">Ρυθμίσεις εφαρμογής</string>
     <!-- region App Settings -->
