--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -921,7 +921,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Ograničenje lokalne pohrane</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB iskorišteno)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB iskorišteno)</string>
     <!-- endregion -->
     <string name="app_settings">App settings</string>
     <!-- region App Settings -->
