--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -904,7 +904,7 @@ Svájci székhellyel</string>
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Helyi tárhely korlát</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB használt)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB használt)</string>
     <!-- endregion -->
     <string name="app_settings">App settings</string>
     <!-- region App Settings -->
