--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -902,7 +902,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Takmörk á staðværu geymslurými</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB notað)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB notað)</string>
     <!-- endregion -->
     <string name="app_settings">Stillingar forrits</string>
     <!-- region App Settings -->
