--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -904,7 +904,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Limite di spazio locale</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB utilizzati)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB utilizzati)</string>
     <!-- endregion -->
     <string name="app_settings">Impostazioni applicazione</string>
     <!-- region App Settings -->
