--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -878,7 +878,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">ストレージ容量の上限</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB 使用中)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB 使用中)</string>
     <!-- endregion -->
     <string name="app_settings">アプリの設定</string>
     <!-- region App Settings -->
