--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -904,7 +904,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Lokale opslaglimiet</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB gebruikt)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB gebruikt)</string>
     <!-- endregion -->
     <string name="app_settings">App instellingen</string>
     <!-- region App Settings -->
