--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -904,7 +904,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Limite de armazenamento local</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB usados)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB usados)</string>
     <!-- endregion -->
     <string name="app_settings">Configurações do aplicativo</string>
     <!-- region App Settings -->
