--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -920,7 +920,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Limită stocare locală</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB folosit)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB folosit)</string>
     <!-- endregion -->
     <string name="app_settings">Setări aplicație</string>
     <!-- region App Settings -->
