--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -900,7 +900,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Lokal lagringsgräns</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB använt)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB använt)</string>
     <!-- endregion -->
     <string name="app_settings">App-inställningar</string>
     <!-- region App Settings -->
