--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -898,7 +898,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">Yerel depolama sınırı</string>
-    <string name="storage_value">%1$d MB (%2$.2f MB kullanıldı)</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB (%2$.2f MB kullanıldı)</string>
     <!-- endregion -->
     <string name="app_settings">Uygulama ayarları</string>
     <!-- region App Settings -->
