--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -884,7 +884,7 @@
     </plurals>
     <!-- endregion -->
     <string name="local_storage">本機儲存空間限制</string>
-    <string name="storage_value">%1$d MB（已使用 %2$.2f MB）</string>
+    <string name="settings_storage_limit_mb_value">%1$d MB（已使用 %2$.2f MB）</string>
     <!-- endregion -->
     <string name="app_settings">應用程式設定</string>
     <!-- region App Settings -->
