--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
     <string name="details_open_in_proton_calendar_title">Open in Proton Calendar</string>
     <string name="details_open_in_proton_calendar_subtitle">Secure encrypted calendar</string>
     <string name="details_open_in_proton_calendar_icon_desc">Proton Calendar icon</string>
+    <string name="details_play_store_error">Can\'t open Play Store</string>
+    <string name="details_open_proton_calendar_error">Can\'t open Proton Calendar</string>
     <!-- endregion -->
 
     <!-- region Composer -->
