--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -918,6 +918,8 @@
     <string name="manage">Manage</string>
     <string name="message_from">Message from %s</string>
     <string name="not_spam_move_to_inbox">Not spam (Move to Inbox)</string>
+    <string name="action_sheet_view_in_light_mode">View in Light mode</string>
+    <string name="action_sheet_view_in_dark_mode">View in Dark mode</string>
     <plurals name="x_messages_count">
         <item quantity="one">%d message</item>
         <item quantity="other">%d messages</item>
