Improve UX for non existent PM address
Show correct error from BE in the Toast and remove the address

MAILAND-2620

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="composer_from">From:</string>
     <string name="composer_subject">Subject:</string>
     <string name="composer_to">To:</string>
+    <string name="composer_removing_address_generic_error">Cannot verify address: %s1. Sending might fail.</string>
+    <string name="composer_removing_address_server_error">Removing address: %s1. %s2</string>
 
     <string name="set_msg_password_title">Set password</string>
     <string name="set_msg_password_info">Set a password to encrypt this message for non-protonmail users. <a href="https://protonmail.com/support/knowledge-base/encrypt-for-outside-users/">Learn more</a></string>
