Fix Localization issues L10N-211
L10N-211

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -881,7 +881,7 @@
 
     <!-- region errors -->
     <string name="error_image_not_found">Image not found</string>
-    <string name="error_image_bad_url">Malformed image url</string>
+    <string name="error_image_bad_url">Malformed image URL</string>
     <string name="error_saving_try_again">Error while saving message. Try again.</string>
     <!-- endregion -->
 
