--- a/app/src/alpha/res/values/strings.xml
+++ b/app/src/alpha/res/values/strings.xml
@@ -20,9 +20,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
     <!-- region All -->
-    <string name="x_app_version_name_code">ProtonMail %s (%d) Alpha</string>
+    <string name="x_app_version_name_code">ProtonMail %s (%d)</string>
     <!-- endregion -->
 
-    <string name="app_version_code" translatable="false">%1$s (%2$d) Alpha</string>
+    <string name="app_version_code" translatable="false">%1$s (%2$d)</string>
 
 </resources>
