--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -179,7 +179,7 @@
     <string name="are_you_sure_empty">Opravdu chcete odstranit všechny zprávy z této složky?</string>
     <string name="send">Odeslat</string>
     <string name="selected">Označeno</string>
-    <string name="no_messages">Žádné zprávy</string>
+    <string name="mailbox_no_messages">Žádné zprávy</string>
     <string name="no_labels">Bez štítku</string>
     <string name="to">Komu</string>
     <string name="cc">Kopie</string>
