--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -179,7 +179,7 @@
     <string name="are_you_sure_empty">Yakin ingin menghapus semua pesan dari folder ini?</string>
     <string name="send">Kirim</string>
     <string name="selected">Dipilih</string>
-    <string name="no_messages">Tidak ada pesan</string>
+    <string name="mailbox_no_messages">Tidak ada pesan</string>
     <string name="no_labels">Tidak ada label</string>
     <string name="to">Kepada</string>
     <string name="cc">Cc</string>
