--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -179,7 +179,7 @@
     <string name="are_you_sure_empty">Tem a certeza de que deseja eliminar todas as mensagens desta pasta?</string>
     <string name="send">Enviar</string>
     <string name="selected">Seleccionadas</string>
-    <string name="no_messages">Nenhuma mensagem</string>
+    <string name="mailbox_no_messages">Nenhuma mensagem</string>
     <string name="no_labels">Sem etiquetas</string>
     <string name="to">Para</string>
     <string name="cc">Cc</string>
