Add empty mailbox strings and images
img_empty_folder.xml has been replaced as exported differently from
Figma, in order to match other images

MAILAND-2876

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,10 @@
 
     <!-- region Mailbox -->
     <string name="mailbox_no_messages">No messages</string>
+    <string name="mailbox_empty_folder_subtitle">This folder is empty</string>
+    <string name="mailbox_empty_inbox_subtitle">You\'re up to date</string>
+    <string name="mailbox_empty_spam_subtitle">Your spam folder is empty</string>
+    <string name="mailbox_empty_trash_subtitle">Trash is empty</string>
     <!-- endregion -->
 
     <!-- region Details -->
