--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,9 @@
 
     <!-- region Dialogs -->
     <string name="contact_list_cannot_upload_groups_dialog_message">Contact groups will not be imported. Please upgrade to a paid plan to enjoy premium features.</string>
+    <string name="contact_details_remote_content_dialog_title">Remote content</string>
+    <string name="contact_details_remote_content_dialog_message">This contact contains remote content.</string>
+    <string name="contact_details_remote_content_dialog_positive_button">Load content</string>
     <!-- endregion -->
 
     <!-- region Onboarding -->
