Review all components and make sure we use the core components
MAILAND-2761

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,7 +260,7 @@
     <string name="expiration_hours">%dH</string>
     <string name="expiration_minutes">%dM</string>
     <plurals name="attachments">
-        <item quantity="one">One Attachment</item>
+        <item quantity="one">1 Attachment</item>
         <item quantity="other">%d Attachments</item>
     </plurals>
     <plurals name="attachments_non_descriptive">
