Handle a scenario in which a free user is uploading contacts that have contact groups
Contact groups are not available on free accounts. When we try to upload
contacts (and groups) on free accounts an error happens because the
creation of the groups is not possible. We need to ignore this error in
ConvertLocalContactsJob and show a dialog that contact groups will not
be uploaded.

MAILAND-2811

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <!-- endregion -->
 
     <!-- region Dialogs -->
+    <string name="contact_list_cannot_upload_groups_dialog_message">Contact groups will not be imported. Please upgrade to a paid plan to enjoy premium features.</string>
     <!-- endregion -->
 
     <!-- region Onboarding -->
